--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,15 @@
   height: 100%;
 
 }
-
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
 .menu{
   background-color: #FFFFFF;
   border: none;
