--- a/css/venta.css
+++ b/css/venta.css
@@ -2,10 +2,10 @@
     padding: 20px;
 }
 
-.modal-body {
+/*.modal-body {
     height: 400px;
     overflow-y: auto;
-}
+}*/
 .modal-dialog{
     overflow-y: initial !important
 }
