--- a/css/venta.css
+++ b/css/venta.css
@@ -2,10 +2,37 @@
     padding: 20px;
 }
 
-/*.modal-body {
-    height: 400px;
-    overflow-y: auto;
-}*/
 .modal-dialog{
-    overflow-y: initial !important
+    overflow-y: initial !important;
+    height:80%;
+    
 }
+table {
+        width: 100%;
+    }
+
+/*thead, tbody, tr, td, th { display: block; }
+
+tr:after {
+    content: ' ';
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+
+thead th {
+    height: 30px;
+
+}
+
+tbody {
+    height: 120px;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
+
+tbody td, thead th {
+    width: 19.2%;
+    float: left;
+}*/
